# YARG.Core

./: .editorconfig  .gitignore  CMakeLists.txt  Directory.Build.props  README.md  YARG.Core.sln  YARG.Core.sln.DotSettings
.github/workflows/: build-stb2csharp.yml  label-conflicts.yml  tests.yml
AutoDownchartCli/: AutoDownchartCli.csproj  Program.cs
ChartDump/: ChartDump.csproj  DumpAll.cs  Program.cs
Docs/Flow Charts/: input_system.drawio
ReplayAnalyzer/: Analyzer.cs  Program.cs  ReplayAnalyzer.csproj
ReplayCli/: Analyzer.cs  AnalyzerMode.cs  Cli.Fuzz.cs  Cli.SimulateFps.cs  Cli.Verify.cs  Cli.cs  Program.cs  ReplayCli.csproj
STB2CSharp/: STB2CSharp.cpp  STB2CSharp.h  STB2CSharp.vcxproj  STB2CSharp.vcxproj.filters
STB2CSharpUWP/: README.md
TestConsole/: .gitignore  CacheLoader.cs  Program.cs  TestConsole.asmdef  TestConsole.csproj
YARG.Core/: .gitignore  Assembly.cs  EnumExtensions.cs  GuidConverter.cs  HelperMethods.cs  InstrumentEnums.cs  InstrumentType.cs  YARG.Core.asmdef  YARG.Core.csproj  YARG.Core.csproj.DotSettings  YargDebugTraceListener.cs  YargMath.cs  YargMath.t4  YargPlayer.cs  YargProfile.cs  YargTrace.cs  package.json
YARG.Core.Benchmarks/: DotChartParsingBenchmarks.cs  MidiParsingBenchmarks.cs  Program.cs  YARG.Core.Benchmarks.csproj
YARG.Core.Benchmarks/Parsing/: DotChartParsingBenchmarks.cs  MidiParsingBenchmarks.cs
YARG.Core.Benchmarks/Utility/: SpanSplitterBenchmarks.cs
YARG.Core.Native/: CMakeLists.txt  YARG.Core.Native.build.targets  YARG.Core.Native.csproj  YARG.Core.Native.targets
YARG.Core.Native/cpp/: CrashHandler.h  CrashHandlerWin32.c  Image.c  Image.h
YARG.Core.Native/cs/: YARGNative.cs
YARG.Core.Native/lib/: CMakeLists.txt
YARG.Core.Native/lib/stb/: CMakeLists.txt
YARG.Core.Native/src/: CrashHandler.c  CrashHandler.h  CrashHandlerWin32.c  Image.c  typedefs.h
YARG.Core.UnitTests/: ChartParsingTests.cs  YARG.Core.UnitTests.asmdef  YARG.Core.UnitTests.csproj
YARG.Core.UnitTests/Audio/: PreviewContextTests.cs
YARG.Core.UnitTests/Chart/: ChartEventTrackerTests.cs  ChartEventTrackerTests.t4  FiveFretDownchartGeneratorTests.cs  InstrumentDifficultyExtensionsTests.cs  SyncTrackTests.cs  VocalsPartTests.cs
YARG.Core.UnitTests/Engine/: BreSoftlockTests.cs  CodaSectionTests.cs  DrumEngineTester.cs  DrumsStatsTests.cs  EngineManagerTester.cs  EngineTester.cs  EngineTimerTests.cs  GuitarEngineTester.cs  GuitarStatsTests.cs  HitWindowSettingsTests.cs  KeysEngineTester.cs  KeysStatsTests.cs  ProKeysUtilitiesTests.cs  ScoreThresholdTests.cs  SustainListTests.cs  VocalsEngineTests.cs  VocalsStatsTests.cs
YARG.Core.UnitTests/Extensions/: CollectionExtensionTests.cs
YARG.Core.UnitTests/Fuzzing/: ConsistencyValidatorTests.cs  FrameTimingGeneratorTests.cs  InputSequenceGeneratorTests.cs
YARG.Core.UnitTests/Game/: ColorProfileTests.cs  YargProfileHarmonyIndexTests.cs  YargProfileModifierTests.cs
YARG.Core.UnitTests/MoonscraperChartParser/: MoonNoteAssertions.cs
YARG.Core.UnitTests/Parsing/: ChartParsingTests.cs  ChartReaderProcessListsTests.cs  ChartReaderSpecTests.cs  ChartText.cs  IniParsingTests.cs  LyricTests.cs  MidReaderProcessListsTests.cs  MoonNoteAssertions.cs  ParseBehaviorTests.Chart.cs  ParseBehaviorTests.Midi.cs  ParseBehaviorTests.cs  SongObjectComparer.cs
YARG.Core.UnitTests/Scanning/: SongScanningTests.cs
YARG.Core.UnitTests/Song/: FileCollectionTests.cs  HashWrapperTests.cs  InstrumentEnumExtensionsTests.cs  PartValuesTests.cs  RBCONEntryTests.cs  ScanExpectedTests.cs  SongCacheCategoryTests.cs  SongEntryMetadataTests.cs  SongEntryPartTests.cs  SongEntryScanningTests.cs  SongEntrySortingTests.cs  SongMetadataTests.cs  SortStringTests.cs  TestSongEntry.cs
YARG.Core.UnitTests/Utility/: RichTextUtilsTests.cs  SongChartBuilder.cs  SpanSplitterTests.cs
YARG.Core/Audio/: AudioChannel.cs  AudioEnums.cs  AudioHelpers.cs  AudioManager.cs  AudioMixer.cs  AudioOptions.cs  DrumSampleChannel.cs  GlobalAudioHandler.cs  IAudioManager.cs  IMicDevice.cs  ISampleChannel.cs  ISfxSample.cs  ISongContext.cs  IStemChannel.cs  IStemController.cs  IStemMixer.cs  MicDevice.cs  (+14 more)
(+660 files in other folders)
